# ffmpeg4discord

./: .coveragerc  Dockerfile  LICENSE  README.md  app.py  conf.json  discord.py  encode.bat  ffmpeg4discord.py  pyproject.toml  requirements.txt  windows_setup.py
.github/workflows/: create_release.yaml  docker-publish.yml  pull-request-actions.yml  python-tests.yml
ffmpeg4discord/: __main__.py  app.py  arguments.py  twopass.py  versioning.py  windows.py
ffmpeg4discord/templates/: web.html
templates/: web.html
tests/: .coveragerc  test_arguments.py  test_main.py  test_twopass.py  test_versioning.py
twopass/: __init__.py  twopass.py
utils/: arguments.py
