[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg4discord"
version = "0.2.2"
description = "A tool to help convert a video file to a target file size."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Zach Fleeman", email = "zfleeman@gmail.com" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">= 3.10"
dependencies = [
    "Flask==3.0.1",
    "ffmpeg-python==0.2.0",
    "platformdirs~=4.5",
]

[project.urls]
Homepage = "https://github.com/zfleeman/ffmpeg4discord"
Issues = "https://github.com/zfleeman/ffmpeg4discord/issues"

[project.scripts]
ff4d = "ffmpeg4discord.__main__:main"
install-ffmpeg-windows = "ffmpeg4discord.windows:install"

[tool.setuptools.package-data]
ffmpeg4discord = ["templates/*.html"]

[tool.setuptools.packages.find]
exclude = ["tests*", "tests"]

[project.optional-dependencies]
dev = [
    "coverage==7.10.2",
    "ruff==0.12.1",
]

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ffmpeg4discord"]
